--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.49.1",
+    "axios": "^1.8.4",
     "next": "15.2.2"
   },
   "devDependencies": {
@@ -23,13 +24,9 @@
   "resolutions": {
     "react": "19.0.0",
     "react-dom": "19.0.0"
-
   },
   "overrides": {
     "react": "19.0.0",
     "react-dom": "19.0.0"
-  
-
   }
-  
 }
