--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.4",
-    "next": "15.2.2"
+    "next": "15.2.2",
+    "@supabase/auth-helpers-nextjs": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
