--- a/package.json
+++ b/package.json
@@ -33,5 +33,18 @@
   "overrides": {
     "react": "19.0.0",
     "react-dom": "19.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version",
+      "last 1 edge version"
+    ]
   }
 }
