--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.4",
     "next": "15.2.2",
-    "@supabase/auth-helpers-nextjs": "^0.8.0"
+    "next-sitemap": "^4.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
